--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
 
   <base href="/" />
 
-  <meta name="color-scheme" content="light" />
+  <meta name="color-scheme" content="light"/>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn2dY24ePIXSn9tkDurdc4PdT0GY5ikLg&libraries=geometry" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn2dY24ePIXSn9tkDurdc4PdT0GY5ikLg&libraries=geometry,places" async defer></script>
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
