Cambios en movil bugs

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwPru0yKk4BJ_dM6TGXxNu50z6_L6ODqg&libraries=geometry,places" async defer></script>
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="light" />
   <cwc-css-helpers></cwc-css-helpers>
 </head>
 <body>
